FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}



a{
	text-decoration: none;
	color: black
}


ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/** end reset css**/
body {
	max-width: 1140px;
	margin:auto;
	font-family: 'Work Sans' ;
	font-size: 14px;
}
header {
	display: flex;
	justify-content: space-between;
	margin: 50px 0;
}
section {
	margin: 50px 0
}

h1{
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 22px;
	font-weight: 800;
	color: #B1663C
}

h1 > span {
	font-family: 'Work Sans';
	font-size:10px;
	letter-spacing: 0.1em;
}

h2{
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154
}
nav ul {
	display: flex;
	align-items: center;
	list-style-type: none;

}
nav li {
	padding: 0 10px;
	font-size: 1.2em;
}

.nav-links:hover, li:hover {
	color: #B1663C;
	cursor: pointer;
}
#introduction {
	display: flex;
	align-items: center;
}
#introduction figure {
	flex: 1
}
#introduction img {
	display: block;
	margin: auto;
	width: 80%;
}

#introduction article {
	flex: 1
}
#introduction h2 {
	margin-bottom: 1em;
}

#introduction p {
	margin-bottom: 0.5em;
}

#portfolio h2 {
	text-align: center;
	margin-bottom: 1em;
}

/*Ajout des filtres en CSS*/
.filters{
	display: flex;
	justify-content: center;
	gap: 10px;
}

.filters__btn{
	color: #1D6154;
	text-align: center;
	font-family: Syne;
	font-size: 16px;
	font-weight: 700;
	border-radius: 60px;
	border: 1px solid #1D6154;
	height: 37px;
	flex-shrink: 1;
	box-sizing: border-box;
}

.filters__btn:focus{
	color: white;
	background-color: #1D6154;
}
.all{
	width: 100px;
}

.objects{
	width: 100px;
}

.flats{
	width: 157px;
}

.hotels{
	width: 198px;
}

.gallery {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column-gap: 20px;
	grid-row-gap: 20px;
}

.gallery img {
	width: 100%;

}
#contact, #login-section{
	width: 50%;
	margin: auto;
}
#contact > * , #login-section > *{
	text-align: center;

}
#contact h2, #login-section h2{
	margin-bottom: 20px;
}
#contact form, #login-section form{
	text-align: left;
	margin-top:30px;
	display: flex;
	flex-direction: column;
}

#contact input, #login-section input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
#contact label, #login-section label {
	margin: 2em 0 1em 0;
}
#contact textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"]{
	font-family: 'Syne';
	font-weight: 700;
	color: white;
	background-color: #1D6154;
	margin : 2em auto ;
	width: 180px;
	text-align: center;
	border-radius: 60px ;
}

.forgotten{
	text-align: center;
	text-decoration: underline;
}

#login-section{
	margin-bottom: 350px;
	transform: scale(0);
	transition: 200ms ease-out;
}

footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em
}

